--- a/translations/un_geneva_design_system.zh-hans.po
+++ b/translations/un_geneva_design_system.zh-hans.po
@@ -1,39 +1,39 @@
-# French translation of the UN Geneva design system
+# Chinese translation of the UN Geneva design system
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: UN Geneva design system (1.0.0)\n"
 "POT-Creation-Date: 2023-10-11 12:34+0000\n"
 "PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
-"Language-Team: French\n"
+"Language-Team: Chinese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n>1);\n"
 
 msgid "United Nations"
-msgstr "Nations Unies"
+msgstr "联合国"
 
 msgid "The United Nations Office at Geneva"
-msgstr "L'Office des Nations Unies à Genève"
+msgstr "联合国日内瓦办事处"
 
 msgid "United Nations Office at Geneva"
-msgstr "Office des Nations Unies à Genève"
+msgstr "联合国日内瓦办事处"
 
 msgid "Quicklinks"
-msgstr "Liens directs"
+msgstr "快速链接"
 
 msgid "Search"
-msgstr "Recherche"
+msgstr "搜索"
 
 msgid "Contact"
-msgstr "Contact"
+msgstr "联络表"
 
 msgid "Follow and connect with us"
-msgstr "Suivez-nous et connectez-vous avec nous"
+msgstr "关注并与我们联系"
 
 msgid "Menu"
-msgstr "Menu"
+msgstr "选项单"
 
 msgid "Welcome to the United Nations"
-msgstr "Bienvenue aux Nations Unies"
+msgstr "欢迎来到联合国，您的世界"
